--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
+    "esformatter": "^0.11.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "morgan": "^1.9.1"
