--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "esformatter": "^0.11.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "morgan": "^1.9.1"
+    "knex": "^0.20.0",
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
