--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./bin/www",
+    "prestart": "bower install",
     "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
